--- a/style.css
+++ b/style.css
@@ -365,6 +365,12 @@ select {
     font-size: 24px;
     line-height: 30px;
   }
+  .box .points {
+    font-size: 24px;
+    line-height: 55px;
+    margin-left: 50%;
+    margin-right: 3%;
+  }
 }
 @media (max-width: 600px) {
   /*need to vary the top 3 only*/
@@ -396,5 +402,11 @@ select {
     margin-top: 0px;
     margin-bottom: 0px;
     height: 200px;
+  }
+  .box .points {
+    font-size: 24px;
+    line-height: 55px;
+    margin-left: 40%;
+    margin-right: 3%;
   }
 }
